--- a/index.html
+++ b/index.html
@@ -226,6 +226,10 @@
                     </div>
                     <div class="clock">
                       <div class="wrap-clock">
+                        <div class="days" id="days"></div>
+                        <span>days</span>
+                      </div>
+                      <div class="wrap-clock">
                         <div class="hours" id="hours"></div>
                         <span>hours</span>
                       </div>
@@ -1589,13 +1593,15 @@
         var distance = countDownDate - now;
 
         // Time calculations for days, hours, minutes and seconds
+        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
         var hours = Math.floor(
-          (distance) / (1000 * 60 * 60)
+          (distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)
         );
         var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
         var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
         // Output the result in an element with id="demo"
+        document.getElementById("days").innerHTML = days;
         document.getElementById("hours").innerHTML = hours;
         document.getElementById("minutes").innerHTML = minutes;
         document.getElementById("seconds").innerHTML = seconds;
@@ -1603,6 +1609,7 @@
         // If the count down is over, write some text
         if (distance < 0) {
           clearInterval(x);
+          document.getElementById("days").innerHTML = "0";
           document.getElementById("hours").innerHTML = "0";
           document.getElementById("minutes").innerHTML = "0";
           document.getElementById("seconds").innerHTML = "0";
